--- a/.github/workflows/pkgci_test_onnx.yml
+++ b/.github/workflows/pkgci_test_onnx.yml
@@ -32,9 +32,9 @@ jobs:
             runs-on: ubuntu-24.04
 
           # AMD GPU
-          - name: amdgpu_rocm_rdna3
+          - name: amdgpu_hip_rdna3
             numprocesses: 1
-            config-file: onnx_ops_gpu_rocm_rdna3.json
+            config-file: onnx_ops_gpu_hip_rdna3.json
             runs-on: nodai-amdgpu-w7900-x86-64
           - name: amdgpu_vulkan
             numprocesses: 4
@@ -138,8 +138,8 @@ jobs:
               - X64
 
           # AMD GPU
-          - name: amdgpu_rocm_rdna3
-            config-file: onnx_models_gpu_rocm_rdna3.json
+          - name: amdgpu_hip_rdna3
+            config-file: onnx_models_gpu_hip_rdna3.json
             runs-on: nodai-amdgpu-w7900-x86-64
           - name: amdgpu_vulkan
             config-file: onnx_models_gpu_vulkan.json
