[Codegen][LLVMGPU] Optionally linearize the number of workgroups specified (#20787)
While IREE generated code itself might have a logical view of grid along
x/y/z dimension, the hardware itself does not really care about that.
The number of workgroups can just be linearized along (x) or (x, y)
dimensions and then the generated code can split out the physical
workgroup ID into many different logical workgroup IDs. This avoids
hitting some limits of number of workgroups along y/z dimensions (We
never really launch workgroups, or should launch, more workgroups than
the limit on x dimension).

This logic already exists for handling logical distributions of greater
than 3D. Add an option to allow it to constrain physical distribution to
1D/2D.

Signed-off-by: MaheshRavishankar <mravisha@amd.com>

--- a/compiler/src/iree/compiler/Codegen/Common/test/BUILD.bazel
+++ b/compiler/src/iree/compiler/Codegen/Common/test/BUILD.bazel
@@ -85,6 +85,7 @@ iree_lit_test_suite(
             "propagate_dispatch_size_bounds.mlir",
             "propagate_reshapes_by_expansion.mlir",
             "reconcile_translation_info.mlir",
+            "reconcile_translation_info_linearize.mlir",
             "reductions.mlir",
             "rematerialize_parallel_ops.mlir",
             "remove_dead_allocs.mlir",
