--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -57,7 +57,9 @@
 /compiler/src/iree/compiler/Codegen/ @MaheshRavishankar
 /compiler/src/iree/compiler/Codegen/Common @hanhanW
 /compiler/src/iree/compiler/Codegen/Common/GPU @antiagainst @qedawkins
+/compiler/src/iree/compiler/Codegen/Dialect/CPU @hanhanW
 /compiler/src/iree/compiler/Codegen/Dialect/GPU @antiagainst @qedawkins
+/compiler/src/iree/compiler/Codegen/ExternalInterfaces @hanhanW
 /compiler/src/iree/compiler/Codegen/LLVMCPU/ @hanhanW @MaheshRavishankar @pashu123
 /compiler/src/iree/compiler/Codegen/LLVMGPU/ @MaheshRavishankar @qedawkins @kuhar @Groverkss
 /compiler/src/iree/compiler/Codegen/SPIRV/ @antiagainst @MaheshRavishankar @kuhar
@@ -65,6 +67,7 @@
 /compiler/src/iree/compiler/Dialect/Encoding/ @bjacob @hanhanW
 /compiler/src/iree/compiler/Dialect/Flow/ @hanhanW @MaheshRavishankar @IanWood1
 /compiler/src/iree/compiler/Dialect/LinalgExt/ @hanhanW @MaheshRavishankar
+/compiler/src/iree/compiler/Dialect/TensorExt/ @hanhanW
 /compiler/src/iree/compiler/Dialect/Vulkan/ @antiagainst @kuhar
 /compiler/src/iree/compiler/DispatchCreation/ @hanhanW @MaheshRavishankar @IanWood1
 /compiler/src/iree/compiler/GlobalOptimization/ @hanhanW
@@ -72,7 +75,7 @@
 /compiler/src/iree/compiler/Preprocessing/ @qedawkins @MaheshRavishankar
 
 # Compiler Plugins
-/compiler/plugins/input/StableHLO/ @hanhanW @MaheshRavishankar @rsuderman
+/compiler/plugins/input/StableHLO/ @MaheshRavishankar @rsuderman
 /compiler/plugins/input/TOSA/ @MaheshRavishankar @rsuderman
 /compiler/plugins/target/ROCM/ @kuhar
 
