--- a/compiler/src/iree/compiler/Codegen/Common/TransformExtensions/test/BUILD.bazel
+++ b/compiler/src/iree/compiler/Codegen/Common/TransformExtensions/test/BUILD.bazel
@@ -20,6 +20,7 @@ iree_lit_test_suite(
         # keep sorted
         [
             "bufferization.mlir",
+            "fuse_consumer.mlir",
         ],
         include = ["*.mlir"],
     ),
