[LinalgExt] Fold unit dims for iree_linalg_ext.gather (#20877)
For iree_linalg_ext.gather to vectorize, there should only be 1 batch
dimension. This patch adds unit dim folding for iree_linalg_ext.gather
to get it to at-max 1 batch dimension once outer batch dimensions are
tiled to 1.

--- a/compiler/src/iree/compiler/Dialect/LinalgExt/Transforms/CMakeLists.txt
+++ b/compiler/src/iree/compiler/Dialect/LinalgExt/Transforms/CMakeLists.txt
@@ -33,6 +33,7 @@ iree_cc_library(
     "DecomposeAttention.cpp"
     "DecomposeIm2col.cpp"
     "DecomposeWinogradPass.cpp"
+    "FoldUnitExtentDims.cpp"
     "PadContractionToBlockSize.cpp"
     "Passes.cpp"
     "ReshapeFusion.cpp"
