--- a/compiler/src/iree/compiler/Dialect/LinalgExt/Transforms/BUILD.bazel
+++ b/compiler/src/iree/compiler/Dialect/LinalgExt/Transforms/BUILD.bazel
@@ -36,6 +36,7 @@ iree_compiler_cc_library(
         "DecomposeAttention.cpp",
         "DecomposeIm2col.cpp",
         "DecomposeWinogradPass.cpp",
+        "FoldUnitExtentDims.cpp",
         "PadContractionToBlockSize.cpp",
         "Passes.cpp",
         "ReshapeFusion.cpp",
