--- a/compiler/src/iree/compiler/Dialect/Stream/Transforms/BUILD.bazel
+++ b/compiler/src/iree/compiler/Dialect/Stream/Transforms/BUILD.bazel
@@ -23,6 +23,7 @@ iree_compiler_cc_library(
         "AnnotateAffinities.cpp",
         "AnnotateDispatchArguments.cpp",
         "AnnotateDispatchAssumptions.cpp",
+        "AutomaticReferenceCounting.cpp",
         "CloneToConsumers.cpp",
         "ConvertToStream.cpp",
         "DumpStatistics.cpp",
@@ -43,6 +44,7 @@ iree_compiler_cc_library(
         "Passes.h.inc",
         "PropagateTimepoints.cpp",
         "RefineUsage.cpp",
+        "ReuseAllocations.cpp",
         "ScheduleAllocation.cpp",
         "ScheduleConcurrency.cpp",
         "ScheduleExecution.cpp",
