--- a/compiler/src/iree/compiler/Dialect/HAL/Transforms/BUILD.bazel
+++ b/compiler/src/iree/compiler/Dialect/HAL/Transforms/BUILD.bazel
@@ -37,6 +37,7 @@ iree_compiler_cc_library(
         "MaterializeResourceCaches.cpp",
         "MaterializeTargetDevices.cpp",
         "MemoizeDeviceQueries.cpp",
+        "MemoizeDeviceSelection.cpp",
         "OutlineMemoizeRegions.cpp",
         "Passes.cpp",
         "Passes.h.inc",
