--- a/compiler/src/iree/compiler/Dialect/HAL/Transforms/CMakeLists.txt
+++ b/compiler/src/iree/compiler/Dialect/HAL/Transforms/CMakeLists.txt
@@ -33,6 +33,7 @@ iree_cc_library(
     "MaterializeResourceCaches.cpp"
     "MaterializeTargetDevices.cpp"
     "MemoizeDeviceQueries.cpp"
+    "MemoizeDeviceSelection.cpp"
     "OutlineMemoizeRegions.cpp"
     "Passes.cpp"
     "Passes.h.inc"
