--- a/compiler/src/iree/compiler/Dialect/HAL/Transforms/test/CMakeLists.txt
+++ b/compiler/src/iree/compiler/Dialect/HAL/Transforms/test/CMakeLists.txt
@@ -29,6 +29,7 @@ iree_lit_test_suite(
     "materialize_resource_caches.mlir"
     "materialize_target_devices.mlir"
     "memoize_device_queries.mlir"
+    "memoize_device_selection.mlir"
     "outline_memoize_regions.mlir"
     "preprocess_executables.mlir"
     "prune_executables.mlir"
