Adding build boilerplate for IREE_HAL_DRIVER_AMDGPU. This defines the new core IREE_HAL_DRIVER_AMDGPU driver (referred to as "amdgpu" in tools/docs). When enabled we include the HSA/ROCR header submodule, enable the AMDGPU target in LLVM, and build clang/llvm-link/lld (required to build our device library). Future changes add the device library build rules that rely on the LLVM toolchain. The CTS and other tests rely on the IREE_HIP_TEST_TARGET_CHIP target (which we should rename to IREE_ROCM_TEST_TARGET_CHIP at some point).

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -82,7 +82,8 @@
 # Runtime
 /runtime/src/iree/ @benvanik
 /runtime/src/iree/hal/cts/ @ScottTodd
+/runtime/src/iree/hal/drivers/amdgpu/ @benvanik @AWoloszyn
 /runtime/src/iree/hal/drivers/cuda/ @antiagainst
-/runtime/src/iree/hal/drivers/hip/ @antiagainst @nithinsubbiah
+/runtime/src/iree/hal/drivers/hip/ @AWoloszyn
 /runtime/src/iree/hal/drivers/metal/ @antiagainst
 /runtime/src/iree/hal/drivers/vulkan/ @antiagainst @ScottTodd
