Adding AMDGPU topology utility. The topology is used to manage which agents are to be used by the logical device and the links between them. We have some helpers for populating the topology from some common flows like device bitfields, UUIDs, and ordinals that cover most command-line usage. The topology is something that can be programmatically configured by hosting code if desired (if agents are already chosen and IREE is integrating into an existing topology).

--- a/runtime/src/iree/hal/drivers/amdgpu/util/BUILD.bazel
+++ b/runtime/src/iree/hal/drivers/amdgpu/util/BUILD.bazel
@@ -65,6 +65,22 @@ iree_runtime_cc_library(
     ],
 )
 
+iree_runtime_cc_test(
+    name = "topology_test",
+    srcs = ["topology_test.cc"],
+    tags = [
+        "driver=amdgpu",
+        "nodocker",
+    ],
+    deps = [
+        ":libhsa",
+        ":topology",
+        "//runtime/src/iree/base",
+        "//runtime/src/iree/testing:gtest",
+        "//runtime/src/iree/testing:gtest_main",
+    ],
+)
+
 ##----------------------------------------------------------------------------##
 ## Internal Utilities
 ##----------------------------------------------------------------------------##
