--- a/compiler/src/iree/compiler/Codegen/Common/GPU/CMakeLists.txt
+++ b/compiler/src/iree/compiler/Codegen/Common/GPU/CMakeLists.txt
@@ -94,6 +94,7 @@ iree_cc_library(
     ::PassesIncGen
     LLVMSupport
     MLIRAMDGPUDialect
+    MLIRAMDGPUUtils
     MLIRAffineDialect
     MLIRAffineTransforms
     MLIRAffineUtils
