Adding IREE::HAL::AnnotateTargetDevicesPass. (#21022)
This is similar to the Stream AnnotateAffinitiesPass but for
DeviceAnalysis and puts attributes on various `!hal.device` SSA values
for inspection. The new test verifies the analysis works for a few
common cases.

--- a/compiler/src/iree/compiler/Dialect/HAL/Transforms/BUILD.bazel
+++ b/compiler/src/iree/compiler/Dialect/HAL/Transforms/BUILD.bazel
@@ -20,6 +20,7 @@ package(
 iree_compiler_cc_library(
     name = "Transforms",
     srcs = [
+        "AnnotateTargetDevices.cpp",
         "AssignLegacyTargetDevices.cpp",
         "AssignTargetDevices.cpp",
         "CaptureExecutableSources.cpp",
