--- a/tests/e2e/linalg/BUILD.bazel
+++ b/tests/e2e/linalg/BUILD.bazel
@@ -36,6 +36,7 @@ LLVM_SRCS = enforce_glob(
         "pack.mlir",
         "large_linalg_matmul.mlir",
         "index.mlir",
+        "argmax.mlir",
     ],
 )
 
@@ -67,6 +68,7 @@ NO_RISCV_SRCS = enforce_glob(
         "pack_i8.mlir",
         "subbyte_to_fp.mlir",
         "unpack.mlir",
+        "argmax.mlir",
     ],
 )
 
@@ -99,6 +101,7 @@ VMVX_SRCS = enforce_glob(
         "large_linalg_matmul.mlir",
         "subbyte_to_fp.mlir",
         "index.mlir",
+        "argmax.mlir",
     ],
 )
 
@@ -146,6 +149,7 @@ VULKAN_SRCS = enforce_glob(
         "pack_dynamic_inner_tiles.mlir",
         "pack_i8.mlir",
         "unpack.mlir",
+        "argmax.mlir",
     ],
 )
 
@@ -200,6 +204,7 @@ CUDA_SRCS = enforce_glob(
         # See bug #20294
         "pack.mlir",
         "pack_dynamic_inner_tiles.mlir",
+        "argmax.mlir",
     ],
 )
 
@@ -221,6 +226,7 @@ iree_check_single_backend_test_suite(
 ROCM_SRCS = enforce_glob(
     # keep sorted
     [
+        "argmax.mlir",
         "pack_i8.mlir",
         "unpack.mlir",
     ],
@@ -262,9 +268,22 @@ iree_check_single_backend_test_suite(
     target_backend = "llvm-cpu",
 )
 
+ARGMAX_SRCS = [
+    "argmax.mlir",
+]
+
+iree_check_single_backend_test_suite(
+    name = "check_argmax_llvm-cpu_local-task",
+    srcs = ARGMAX_SRCS,
+    compiler_flags = ["--iree-llvmcpu-target-cpu=generic"],
+    driver = "local-task",
+    target_backend = "llvm-cpu",
+)
+
 test_suite(
     name = "check",
     tests = [
+        ":check_argmax_llvm-cpu_local-task",
         ":check_index_llvm-cpu_local-task",
         ":check_large_linalg_matmul_cuda",
         ":check_llvm-cpu_local-task",
