[Codegen][GPU] Creating FissionTransferOpsInControlFlow to assist convolution prefetching (#21018)
This pass allows dependent transfer read and write ops to split as
individual targets for shared memory prefetch to happen. This is
especially helpful in padded convolutions where control flow exists in
middle of the K-loop.

In very generic terms, given a loop with transfer read and write
operations:

```cpp
scf.for %i = 0 to 10 {
  %read = vector.transfer_read ...
  vector.transfer_write %read ...
}
```
This pass will transform it into:
```cpp
%alloca = memref.alloca ...  // Alloca for intermediate results
scf.for %i = 0 to 10 {
  %read = vector.transfer_read ...
  vector.transfer_write %read %alloca
}
scf.for %j = 0 to 10 {
  %read = vector.transfer_read %alloca
  vector.transfer_write %read ...
}
```

---------

Signed-off-by: jerryyin <zhuoryin@amd.com>

--- a/compiler/src/iree/compiler/Codegen/Common/test/BUILD.bazel
+++ b/compiler/src/iree/compiler/Codegen/Common/test/BUILD.bazel
@@ -50,6 +50,7 @@ iree_lit_test_suite(
             "emulate_narrow_type.mlir",
             "erase_hal_descriptor_type.mlir",
             "extract_address_computation.mlir",
+            "fission_transfer_ops_control_flow.mlir",
             "flatten_memref_subspan.mlir",
             "fold_affine_min_in_distributed_loops.mlir",
             "fold_affine_min_of_block_id.mlir",
