--- a/compiler/src/iree/compiler/Codegen/Common/BUILD.bazel
+++ b/compiler/src/iree/compiler/Codegen/Common/BUILD.bazel
@@ -118,6 +118,7 @@ iree_compiler_cc_library(
         "EraseDeadAllocAndStores.cpp",
         "EraseHALDescriptorTypeFromMemRef.cpp",
         "ExtractAddressComputation.cpp",
+        "FissionTransferOpsInControlFlow.cpp",
         "FlattenMemRefSubspanPass.cpp",
         "FlattenMemRefs.cpp",
         "FoldAffineMinInDistributedLoops.cpp",
